--- a/swagger-boot/src/main/resources/application.properties
+++ b/swagger-boot/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=swagger-boot
 # Enable Swagger UI
 # springfox.documentation.swagger-ui.enabled=true
+# /api-docs endpoint custom path
+springdoc.api-docs.path=/api-docs
